@@ -1,6 +1,13 @@
 This is just to motivate myself to improve a little bit every day :)
 
-Best: 18
+Best: 19
+
+11-04-2024
+Streak: 19
+Learned:
+Did:
+    - Rework getTodayWithOffset to be more configurable, change name as 'today with offset'
+        sounds more confusing than clearly pointing out it is a wacky situational implementation.
 
 10-04-2024
 Streak: 18
